--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/Project-2/bundle.js"></script></body>
+  <script type="text/javascript" src="/Nottify/bundle.js"></script></body>
 </html>
